# chatkit-haskell

./: Chatkit.hs  LICENSE  README.md  Unit.hs  chatkit-haskell.cabal  stack.yaml
Chatkit/: Model.hs
Chatkit/Service/: Core.hs  Cursors.hs  Files.hs  InsecureTokenProvider.hs  Presence.hs  RolesAndPermissions.hs  Scheduler.hs  Undocumented.hs
Chatkit/Test/: Unit.hs
Examples/Server/: Server.cabal  Server.hs  stack.yaml
