cabal-version: 1.12

name:           Server
version:        0.1.0.0
description:    An example of using the Chatkit-Haskell bindings in a server
author:         Samuel A Yallop
maintainer:
copyright:      2020 Samuel
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/syallop/Chatkit-Haskell/Examples/Server

executable Server
  main-is: Server.hs
  other-modules:
  hs-source-dirs:
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chatkit-haskell
    , pusher-platform-haskell
    , text
    , time
    , containers
    , aeson
  default-language: Haskell2010

